--- a/style.css
+++ b/style.css
@@ -65,3 +65,11 @@ li {
   flex-direction: column;
   align-items: center;
 }
+
+.starsign-container img {
+  cursor: pointer;
+}
+
+.starsign-container img:hover {
+  opacity: 0.7;
+}
