--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@ nav ul {
   justify-content: end;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+a:hover {
+  opacity: 0.7;
+}
+
 li {
   list-style: none;
   margin: 1rem;
