--- a/tarot/tarot.css
+++ b/tarot/tarot.css
@@ -7,6 +7,26 @@ body {
   height: 100vh;
 }
 
+nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  width: 90vw;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+a:hover {
+  opacity: 0.7;
+}
+
+li {
+  list-style: none;
+  margin: 1rem;
+}
+
 h1 {
   margin: 0;
   text-align: center;
@@ -66,5 +86,12 @@ p {
 
   #card-display {
     height: 400px;
+  }
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  nav ul {
+    margin-right: 2rem;
   }
 }
